--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="menu" id="menu">
         <a href="index.html">League Manager</a>
         <a href="record.html">League Records</a>
-        <a href="#link3">League for the Positions</a>
+        <a href="positionselect.html">League for the Positions</a>
     </div>
     <div class="menu-background" id="menu-background" onclick="closeMenu()"></div>
 
