search,table,datauppercasing

--- a/record.html
+++ b/record.html
@@ -32,6 +32,7 @@
     <br>
     <input type="text" id="searchbox" placeholder="Search....">
     <br>
+    <div id="no-results"><b>No League matching with your query</b></div>
     <div id="selectleague"></div>
 </body>
 </html>
